Single Stream Working

--- a/twitch_split/splitter/templates/_base.html
+++ b/twitch_split/splitter/templates/_base.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>{{ page_title }}</title>
+		<link href="{% static 'css/base.css' %}" rel="stylesheet">
 	</head>
 
 	<body>
