Working on two_horiz

--- a/twitch_split/splitter/templates/two_horiz.html
+++ b/twitch_split/splitter/templates/two_horiz.html
@@ -2,4 +2,8 @@
 
 {% block content %}
 
+{% for stream in streams %}
+	{% include 'video_embed.html' with channel=stream %}
+{% endfor %}
+
 {% endblock content %}
