--- a/twitch_split/static/css/base.less
+++ b/twitch_split/static/css/base.less
@@ -1,13 +1,28 @@
-html {
+.zero_mp {
 	margin: 0;
 	padding: 0;
+}
+
+html {
+	.zero_mp;
 	height: 100%;
 	width: 100%;
 }
 
 body {
-	margin: 0;
-	padding: 0;
+	.zero_mp;
 	height: 100%;
 	width: 100%;
+}
+
+.one_full {
+	.zero_mp;
+	width: 100%;
+	height: 100%;
+}
+
+.two_horiz {
+	.zero_mp;
+	width: 100%;
+	height: 50%;
 }
