--- a/twitch_split/static/css/base.css
+++ b/twitch_split/static/css/base.css
@@ -1,3 +1,7 @@
+.zero_mp {
+  margin: 0;
+  padding: 0;
+}
 html {
   margin: 0;
   padding: 0;
@@ -9,4 +13,16 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+}
+.one_full {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+.two_horiz {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 50%;
 }
