Messages display via Jquery

--- a/twitch_split/static/css/base.css
+++ b/twitch_split/static/css/base.css
@@ -1,12 +1,25 @@
+.fiber_pattern {
+  background-image: url('/static/images/fiber_pattern.png');
+}
 .zero_mp {
   margin: 0;
   padding: 0;
+}
+.inner_shadow {
+  -webkit-box-shadow: inset 0px 22px 38px -10px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: inset 0px 22px 38px -10px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0px 22px 38px -10px rgba(0, 0, 0, 0.5);
+}
+.border {
+  border-bottom: 1px solid #7CCBF2;
 }
 html {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
 }
 body {
   margin: 0;
@@ -25,4 +38,24 @@ body {
   padding: 0;
   width: 100%;
   height: 50%;
+}
+#notice_wrapper {
+  width: 100%;
+  height: 100px;
+  background-image: url('/static/images/fiber_pattern.png');
+  margin: 0;
+  padding: 0;
+  -webkit-box-shadow: inset 0px 22px 38px -10px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: inset 0px 22px 38px -10px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0px 22px 38px -10px rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid #7CCBF2;
+}
+.notice {
+  margin: 0;
+  padding: 0;
+  padding-top: 25px;
+  font-style: italic;
+  font-size: 35px;
+  text-align: center;
+  color: darkgray;
 }
