--- a/twitch_split/splitter/templates/_base.html
+++ b/twitch_split/splitter/templates/_base.html
@@ -4,6 +4,9 @@
 	<head>
 		<title>{{ page_title }}</title>
 		<link href="{% static 'css/base.css' %}" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic' rel='stylesheet' type='text/css'>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+		<script src="{% static 'script/base.js' %}"></script>
 	</head>
 
 	<body>
