--- a/twitch_split/static/css/base.less
+++ b/twitch_split/static/css/base.less
@@ -22,7 +22,7 @@ html {
 	height: 100%;
 	width: 100%;
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
+	font-weight: 300;
 }
 
 body {
@@ -58,5 +58,5 @@ body {
 	font-style: italic;
 	font-size: 35px;
 	text-align: center;
-	color: darkgray;
+	color: white;
 }
