--- a/twitch_split/static/css/base.less
+++ b/twitch_split/static/css/base.less
@@ -17,6 +17,34 @@
 	border-bottom: 1px solid #7CCBF2;
 }
 
+#float_left {
+	width: 25%;
+	height: 96%;
+	float: left;
+	display: inline-block;
+	.zero_mp;
+}
+
+#float_right {
+	width: 25%;
+	float: left;
+	height: 96%;
+	display: inline-block;
+	.zero_mp;
+}
+
+#float_middle {
+	width: 50%;
+	float: left;
+	height: 96%;
+	display: inline-block;
+	.zero_mp;
+}
+
+.clear_div {
+	clear: both;
+}
+
 html {
 	.zero_mp;
 	height: 100%;
@@ -35,6 +63,18 @@ body {
 	.zero_mp;
 	width: 100%;
 	height: 100%;
+}
+
+.title {
+	display: block;
+	background-color: gray;
+	height: 23px;
+	.zero_mp;
+	padding: 0;
+	p {
+		.zero_mp;
+		text-align: center;
+	}
 }
 
 .two_horiz {
